--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
