--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-oauth/google": "^0.13.4",
     "@vercel/speed-insights": "^1.3.1",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-router-dom": "^7.12.0"
