--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vercel/speed-insights": "^1.3.1",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
